# taskReminder

./: .gitignore  AGENTS.md  README.md  index.html  notification.html  package.json  pnpm-lock.yaml  sticky-note-item.html  sticky-note.html  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.codex/environments/: environment.toml
design/: 便签卡片.pen
scripts/: build-updater.ps1  tauri.mjs  write-updater-manifest.mjs
src/: App.vue  NotificationApp.vue  StickyNoteApp.vue  StickyNoteItemApp.vue  api.ts  main.ts  markdown.ts  notification.ts  safeStorage.ts  startupError.ts  stickyNote.ts  stickyNoteItem.ts  styles.css  types.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1.1.0__initial_schema.sql  V1.2.0__add_webdav_settings.sql  V1.3.0__add_sync_metadata.sql  V1.4.0__add_notification_theme.sql  V1.4.1__add_recurring_modes.sql  V1.4.2__add_sticky_note_settings.sql  V1.4.3__add_sticky_notes_table.sql  V1.4.4__add_sticky_note_meta.sql  V1.4.5__merge_sticky_notes_into_tasks.sql  V1.4.6__add_sticky_note_opacity.sql  V1.4.7__add_sticky_note_item_size.sql  V1.4.8__add_window_opacity.sql  V1.4.9__add_sticky_note_pin_state.sql
src-tauri/src/: autostart.rs  db.rs  errors.rs  main.rs  maintenance.rs  models.rs  paths.rs  recurrence.rs  scheduler.rs  single_instance.rs  state.rs  sync.rs  tray.rs
src/components/: MarkdownNoteEditor.vue  Modal.vue
